<resources>
    <string name="app_name">NotesApp</string>
    <string name="STR_HOME">Home</string>
    <string name="STR_ADD">Add</string>
    <string name="STR_NOTES">Notes</string>
    <string name="STR_RECENT_CREATE_NOTES">Recently created notes</string>
    <string name="STR_CATEGORY_NAME">Category Name</string>
    <string name="STR_MORE">More</string>
    <string name="STR_SHOW_LESS">Show Less</string>
    <string name="title_activity_settings_view_controller">SettingsViewController</string>
    <string name="STR_SETTINGS">Settings</string>
    <string name="STR_CREATE_NEW_CATEGORY">Create New Category</string>
    <string name="STR_NEW_CATEGORY_NAME">Enter New Category Name</string>
    <string name="STR_SELECT_ICON">Choose One Icon</string>
    <string name="STR_ADD_CATEGORY">Add Category</string>
    <string name="title_activity_manage_category_view_controller">ManageCategoryViewController</string>
    <string name="STR_NO_NOTE_CREATED">You have no note created yet.</string>
    <string name="STR_NO_CATEGORY_CREATED">You have no category created yet.</string>
    <string name="STR_NO_CATEGORY_GO_SETTING">You have no category created yet. \n Please go to Settings to add</string>
    <string name="STR_DELETE_ALL_NOTES">Delete all notes</string>
    <string name="STR_SURE_TO_DELETE_CATEGORIES">Are you sure you want to delete all categories?</string>
    <string name="STR_SURE_TO_DELETE_NOTE">Are you sure you want to delete current note?</string>
    <string name="STR_SURE_TO_DELETE_ALL_NOTES">Are you sure you want to delete all notes?</string>
    <string name="STR_SURE_TO_DELETE_ALL_NOTES_IN_CURRENT_CATEGORY">Are you sure you want to delete current category and notes?</string>
    <string name="STR_YES">YES</string>
    <string name="STR_NO">NO</string>
    <string name="title_activity_new_note_view_controller">NewNoteViewController</string>
    <string name="STR_NEW_NOTE">New Note</string>
    <string name="STR_CHOOSE_CATEGORY">Choose a category</string>
    <string name="STR_SAVE">Save</string>
    <string name="STR_PICK_HERE">Pick from here</string>
    <string name="STR_ENTER_NOTE_TITLE">Enter Note Title</string>
    <string name="STR_ENTER_NOTE_DETAILS">Enter Note Details</string>
    <string name="STR_EDIT_NOTE">Edit Note</string>
    <string name="STR_DELETE">Delete</string>
    <string name="STR_UPDATE">Update</string>
    <string name="title_activity_edit_note_view_controller">EditNoteViewController</string>
    <string name="STR_NOTE_DETAIL">Note Detail</string>
    <string name="title_activity_abstract_note_view_controller">AbstractNoteViewController</string>
    <string name="STR_SUMMARY">Summary</string>
    <string name="STR_OK">OK</string>
    <string name="STR_FILL_CATEGORY_NAME_AND_ICON">Please fill up category name and choose an icon</string>
    <string name="STR_SUCCESSFUL_CREATED_CATEGORY">You have created a new category. Check it out!</string>
    <string name="STR_VIEW_DETAIL">View Detail</string>
    <string name="STR_TOPIC_TOTAL">This topic has a total of </string>
    <string name="STR_RECORDS">records.</string>
    <string name="STR_MENU_NAME">Menu Name</string>\
    <string name="STR_CATEGORY_DETAIL">Category Detail</string>
    <string name="STR_DELETE_CURRENT_CATEGORY">Delete current category</string>
    <string name="title_activity_category_detail_view_controller">CategoryDetailViewController</string>
</resources>