<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners_categories"
    android:padding="12dp"
    android:layout_marginBottom="12dp">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/ll_category_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_category_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_book"
            app:tint="@color/orange_light" />

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/STR_CATEGORY_NAME"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/btn_view_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_VIEW_DETAIL"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:fontFamily="sans-serif"
            android:background="@drawable/rounded_corners_button_info"
            android:padding="12dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_category_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/STR_TOPIC_TOTAL"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_dialog"
        android:layout_marginBottom="12dp"/>


</LinearLayout>