<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <LinearLayout
        android:id="@+id/ll_note_detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:layout_margin="12dp"
            android:layout_gravity="center_vertical"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_note_detail_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_NOTE_DETAIL"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_margin="6dp"/>
    </LinearLayout>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll_note_detail_container"
        android:background="@color/light_gray"/>

    <TextView
        android:id="@+id/tv_choose_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/STR_CHOOSE_CATEGORY"
        android:layout_below="@+id/v_divider"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_margin="12dp"/>

    <!-- Choose Category -->
    <LinearLayout
        android:id="@+id/ll_choose_category_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_categories"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        android:layout_below="@+id/tv_choose_category_title">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/ll_category_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_category_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="gone"
                app:tint="@color/orange_light" />

            <TextView
                android:id="@+id/tv_selected_category_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/STR_PICK_HERE"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/iv_category_dropdown"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_down_arrow"
                app:tint="@color/white" />
        </LinearLayout>

        <!-- List of Category -->
        <LinearLayout
            android:id="@+id/ll_category_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tv_no_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:text="@string/STR_NO_CATEGORY_CREATED"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/orange_light"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Note Description -->
    <TextView
        android:id="@+id/tv_note_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/STR_ENTER_NOTE_DETAILS"
        android:layout_below="@+id/ll_choose_category_container"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

    <EditText
        android:id="@+id/edt_note_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_note_desc"
        android:background="@drawable/rounded_corners_categories"
        android:maxLines="6"
        android:minLines="4"
        android:padding="12dp"
        android:layout_margin="12dp"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_gray"
        android:gravity="start"
        android:hint="@string/STR_ENTER_NOTE_DETAILS" />

    <LinearLayout
        android:id="@+id/ll_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_DELETE"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:layout_margin="24dp"
            android:background="@drawable/rounded_corners_button_alert"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_UPDATE"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:layout_margin="24dp"
            android:background="@drawable/rounded_corners_button_default"
            android:layout_weight="1"/>

    </LinearLayout>


</RelativeLayout>