<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners_categories"
    android:padding="12dp"
    android:layout_marginBottom="12dp">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/ll_category_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_category_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_book"
            app:tint="@color/orange_light" />

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/STR_CATEGORY_NAME"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="sans-serif"/>

        <ImageView
            android:id="@+id/iv_category_dropdown"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_down_arrow"
            app:tint="@color/white" />
    </LinearLayout>

    <!-- List of Notes -->
    <LinearLayout
        android:id="@+id/ll_note_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tv_bottom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_MORE"
            android:textColor="@color/orange_light"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:paddingBottom="20dp"/>
        <TextView
            android:id="@+id/tv_no_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:text="@string/STR_NO_NOTE_CREATED"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/orange_light"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>