<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_gray">

    <LinearLayout
        android:id="@+id/ll_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:layout_margin="12dp"
            app:tint="@color/white"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_SETTINGS"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_margin="6dp"/>

    </LinearLayout>

    <View
        android:id="@+id/v_divider"
        android:layout_below="@+id/ll_settings_title"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_divider"
        android:layout_above="@+id/btn_create_new_category"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/btn_create_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/STR_CREATE_NEW_CATEGORY"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_corners_button_default"
        android:padding="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_above="@+id/btn_delete_all_notes"/>

    <TextView
        android:id="@+id/btn_delete_all_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/STR_DELETE_ALL_NOTES"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:layout_margin="24dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_corners_button_alert" />

</RelativeLayout>