<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@drawable/rounded_corner_dialog">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/bright_gray"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_dialog_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_info"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/tv_confirmation_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/STR_SURE_TO_DELETE_CATEGORIES"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/btn_negative"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/STR_NO"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_corners_button_alert"
                    android:padding="15dp"
                    android:textAlignment="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/btn_positive"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/STR_YES"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:background="@drawable/rounded_corners_button_default"
                    android:padding="15dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>