<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <LinearLayout
        android:id="@+id/ll_settings_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:layout_margin="12dp"
            android:layout_gravity="center_vertical"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STR_CREATE_NEW_CATEGORY"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_margin="6dp"/>
    </LinearLayout>

    <View
        android:id="@+id/v_divider"
        android:layout_below="@+id/ll_settings_title_container"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <TextView
        android:id="@+id/tv_category_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/STR_NEW_CATEGORY_NAME"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:layout_below="@id/v_divider"/>

    <EditText
        android:id="@+id/edt_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/STR_CATEGORY_NAME"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:padding="12dp"
        android:layout_marginEnd="12dp"
        android:textColorHint="@color/light_gray"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_below="@id/tv_category_name_title"
        android:background="@drawable/rounded_corners_categories"/>

    <TextView
        android:id="@+id/tv_select_icon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/STR_SELECT_ICON"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@+id/edt_category_name"/>

    <GridLayout
        android:id="@+id/gl_icon_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_select_icon_title"
        android:rowCount="2"
        android:columnCount="4"
        android:layout_margin="12dp">
        <!-- Add ImageButtons for each icon-->
        <ImageView
            android:id="@+id/iv_food_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_food"
            android:tag="ic_food"
            app:tint="@color/white" />
        <ImageView
            android:id="@+id/iv_book_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_book"
            android:tag="ic_book"
            app:tint="@color/white" />
        <ImageView
            android:id="@+id/iv_security_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_shield"
            android:tag="ic_security"
            app:tint="@color/white" />
        <ImageView
            android:id="@+id/iv_home_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_home"
            android:tag="ic_home"
            app:tint="@color/white" />
        <ImageView
            android:id="@+id/iv_coin_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_coin"
            android:tag="ic_coin"
            app:tint="@color/white" />
        <ImageView
            android:id="@+id/iv_heart_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_heart"
            android:tag="ic_heart"
            app:tint="@color/white" />
        <ImageView
            android:id="@+id/iv_hair_cut"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_hair_cut"
            android:tag="ic_hair_cut"
            app:tint="@color/white" />
        <ImageView
            android:id="@+id/iv_star_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_star"
            android:tag="ic_star"
            app:tint="@color/white" />
    </GridLayout>


    <TextView
        android:id="@+id/btn_add_category"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_corners_button_default"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/STR_ADD_CATEGORY"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>